--- a/en_US/connect_to_deployments/esp8266.md
+++ b/en_US/connect_to_deployments/esp8266.md
@@ -49,45 +49,58 @@ This section describes how to connect an ESP8266 client to MQTT broker over TCP 
 
 
 ```c
-// WiFi
-const char *ssid = "mousse"; // Enter your WiFi name
-const char *password = "qweqweqwe";  // Enter WiFi password
+// WiFi settings
+const char *ssid = "WIFI_SSID";             // Replace with your WiFi name
+const char *password = "WIFI_PASSWORD";   // Replace with your WiFi password
 
-// MQTT Broker
-const char *mqtt_broker = "broker.emqx.io"; // broker address
-const char *topic = "esp8266/test"; // define topic 
-const char *mqtt_username = "emqx"; // username for authentication
-const char *mqtt_password = "public"; // password for authentication
-const int mqtt_port = 1883; // port of MQTT over TCP
+// MQTT Broker settings
+const char *mqtt_broker = "broker.emqx.io";  // EMQX broker endpoint
+const char *mqtt_topic = "emqx/esp8266";     // MQTT topic
+const char *mqtt_username = "emqx";  // MQTT username for authentication
+const char *mqtt_password = "public";  // MQTT password for authentication
+const int mqtt_port = 1883;  // MQTT port (TCP)
 ```
 
 3. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
 
 ```c
-// Set software serial baud to 115200;
-Serial.begin(115200);
-// connecting to a WiFi network
-WiFi.begin(ssid, password);
-while (WiFi.status() != WL_CONNECTED) {
-    delay(500);
-    Serial.println("Connecting to WiFi..");
+void setup() {
+    Serial.begin(115200);
+    connectToWiFi();
+    mqtt_client.setServer(mqtt_broker, mqtt_port);
+    mqtt_client.setCallback(mqttCallback);
+    connectToMQTTBroker();
+}
+
+void connectToWiFi() {
+    WiFi.begin(ssid, password);
+    Serial.print("Connecting to WiFi");
+    while (WiFi.status() != WL_CONNECTED) {
+        delay(500);
+        Serial.print(".");
+    }
+    Serial.println("\nConnected to the WiFi network");
 }
 ```
 
 4. Set MQTT broker, write callback function, and print connection information on the serial monitor at the same time.
 
 ```c
-client.setServer(mqtt_broker, mqtt_port);
-client.setCallback(callback);
-while (!client.connected()) {
-    String client_id = "esp8266-client-";
-    client_id += String(WiFi.macAddress());
-    Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
-    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-    } else {
-        Serial.print("failed with state ");
-        Serial.print(client.state());
-        delay(2000);
+void connectToMQTTBroker() {
+    while (!mqtt_client.connected()) {
+        String client_id = "esp8266-client-" + String(WiFi.macAddress());
+        Serial.printf("Connecting to MQTT Broker as %s.....\n", client_id.c_str());
+        if (mqtt_client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+            Serial.println("Connected to MQTT broker");
+            mqtt_client.subscribe(mqtt_topic);
+            // Publish message upon successful connection
+            mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
+        } else {
+            Serial.print("Failed to connect to MQTT broker, rc=");
+            Serial.print(mqtt_client.state());
+            Serial.println(" try again in 5 seconds");
+            delay(5000);
+        }
     }
 }
 ```
@@ -95,19 +108,19 @@ while (!client.connected()) {
 5. After successfully connecting to the MQTT broker, ESP8266 will publish messages on topic `esp8266/test` to the MQTT server and subscribe to messages on topic `esp8266/test`.
 
 ```c
-// publish and subscribe
-client.publish(topic, "hello emqx"); // publish to the topic
-client.subscribe(topic); // subscribe from the topic
+mqtt_client.subscribe(mqtt_topic);
+// Publish message upon successful connection
+mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
 ```
 
 6. Print the topic name to the serial port and then print every byte of received messages.
 
 ```c
-void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
+void mqttCallback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message received on topic: ");
     Serial.println(topic);
     Serial.print("Message:");
-    for (int i = 0; i < length; i++) {
+    for (unsigned int i = 0; i < length; i++) {
         Serial.print((char) payload[i]);
     }
     Serial.println();
@@ -121,75 +134,90 @@ The complete code is displayed as follows:
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
 
-// WiFi
-const char *ssid = "mousse"; // Enter your WiFi name
-const char *password = "qweqweqwe";  // Enter WiFi password
+// WiFi settings
+const char *ssid = "WIFI_SSID";             // Replace with your WiFi name
+const char *password = "WIFI_PASSWORD";   // Replace with your WiFi password
 
-// MQTT Broker
-const char *mqtt_broker = "broker.emqx.io"; // broker address
-const char *topic = "esp8266/test"; // define topic 
-const char *mqtt_username = "emqx"; // username for authentication
-const char *mqtt_password = "public"; // password for authentication
-const int mqtt_port = 1883; // port of MQTT over TCP
+// MQTT Broker settings
+const char *mqtt_broker = "broker.emqx.io";  // EMQX broker endpoint
+const char *mqtt_topic = "emqx/esp8266";     // MQTT topic
+const char *mqtt_username = "emqx";  // MQTT username for authentication
+const char *mqtt_password = "public";  // MQTT password for authentication
+const int mqtt_port = 1883;  // MQTT port (TCP)
 
 WiFiClient espClient;
-PubSubClient client(espClient);
+PubSubClient mqtt_client(espClient);
+
+void connectToWiFi();
+
+void connectToMQTTBroker();
+
+void mqttCallback(char *topic, byte *payload, unsigned int length);
 
 void setup() {
-  // Set software serial baud to 115200;
-  Serial.begin(115200);
-  // connecting to a WiFi network
-  WiFi.begin(ssid, password);
-  while (WiFi.status() != WL_CONNECTED) {
-      delay(500);
-      Serial.println("Connecting to WiFi..");
-  }
-  Serial.println("Connected to the WiFi network");
-  //connecting to a mqtt broker
-  client.setServer(mqtt_broker, mqtt_port);
-  client.setCallback(callback);
-  while (!client.connected()) {
-      String client_id = "esp8266-client-";
-      client_id += String(WiFi.macAddress());
-      Serial.printf("The client %s connects to the public mqtt broker\n", client_id.c_str());
-      if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-          Serial.println("Public emqx mqtt broker connected");
-      } else {
-          Serial.print("failed with state ");
-          Serial.print(client.state());
-          delay(2000);
-      }
-  }
-  // publish and subscribe
-  client.publish(topic, "hello emqx"); // publish to the topic
-  client.subscribe(topic); // subscribe from the topic
+    Serial.begin(115200);
+    connectToWiFi();
+    mqtt_client.setServer(mqtt_broker, mqtt_port);
+    mqtt_client.setCallback(mqttCallback);
+    connectToMQTTBroker();
 }
 
-void callback(char *topic, byte *payload, unsigned int length) {
-  Serial.print("Message arrived in topic: ");
-  Serial.println(topic);
-  Serial.print("Message:");
-  for (int i = 0; i < length; i++) {
-      Serial.print((char) payload[i]);
-  }
-  Serial.println();
-  Serial.println("-----------------------");
+void connectToWiFi() {
+    WiFi.begin(ssid, password);
+    Serial.print("Connecting to WiFi");
+    while (WiFi.status() != WL_CONNECTED) {
+        delay(500);
+        Serial.print(".");
+    }
+    Serial.println("\nConnected to the WiFi network");
+}
+
+void connectToMQTTBroker() {
+    while (!mqtt_client.connected()) {
+        String client_id = "esp8266-client-" + String(WiFi.macAddress());
+        Serial.printf("Connecting to MQTT Broker as %s.....\n", client_id.c_str());
+        if (mqtt_client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+            Serial.println("Connected to MQTT broker");
+            mqtt_client.subscribe(mqtt_topic);
+            // Publish message upon successful connection
+            mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
+        } else {
+            Serial.print("Failed to connect to MQTT broker, rc=");
+            Serial.print(mqtt_client.state());
+            Serial.println(" try again in 5 seconds");
+            delay(5000);
+        }
+    }
+}
+
+void mqttCallback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message received on topic: ");
+    Serial.println(topic);
+    Serial.print("Message:");
+    for (unsigned int i = 0; i < length; i++) {
+        Serial.print((char) payload[i]);
+    }
+    Serial.println();
+    Serial.println("-----------------------");
 }
 
 void loop() {
-  client.loop();
+    if (!mqtt_client.connected()) {
+        connectToMQTTBroker();
+    }
+    mqtt_client.loop();
 }
 ```
 
 ## Connect over TLS/SSL Port
 This section describes how to connect an ESP8266 client to MQTT broker over TLS/SSL port in Arduino IDE. Settings for connections over TLS/SSL ports are different from those for connections over TCP port, but the code is the same in the publishing and subscribing functions.
 
-1. Import libraries ESP8266WiFi and PubSubClient.
+1. Import libraries ESP8266WiFi, PubSubClient, time.
 
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
-#include <WiFiClientSecureBearSSL.h>
+#include <time.h>
 ```
 
 2. Set Wi-Fi name and password, and connection address and port.
@@ -198,82 +226,133 @@ This section describes how to connect an ESP8266 client to MQTT broker over TLS/
 
 
 ```c
-// WiFi
-const char *ssid = "[WIFI SSID]"; // Enter your WiFi name
-const char *password = "[WIFI password]";  // Enter WiFi password
+// WiFi credentials
+const char *ssid = "WIFI_SSID";             // Replace with your WiFi name
+const char *password = "WIFI_PASSWORD";   // Replace with your WiFi password
 
-// MQTT Broker
-const char *mqtt_broker = "broker.emqx.io"; // broker address
-const char *topic = "esp8266/test"; // define topic 
-const char *mqtt_username = "emqx"; // username for authentication
-const char *mqtt_password = "public"; // password for authentication
-const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+// MQTT Broker settings
+const int mqtt_port = 8883;  // MQTT port (TLS)
+const char *mqtt_broker = "broker.emqx.io";  // EMQX broker endpoint
+const char *mqtt_topic = "emqx/esp8266";     // MQTT topic
+const char *mqtt_username = "emqx";  // MQTT username for authentication
+const char *mqtt_password = "public";  // MQTT password for authentication
 ```
 
-3. Set fingerprint
-The fingerprints of EMQX broker, for reference only. If you are not using EMQX Cloud Serverless or public EMQX broker, you need to calculate the sha1 fingerprint of your server certificate and update the 'fingerprint' variable below.
+3. Set Server and SSL certificate
 
 ```c
-// init wifi client
-WiFiClientSecure espClient;
-PubSubClient client(espClient);
+// NTP Server settings
+const char *ntp_server = "pool.ntp.org";     // Default NTP server
+// const char* ntp_server = "cn.pool.ntp.org"; // Recommended NTP server for users in China
+const long gmt_offset_sec = 0;            // GMT offset in seconds (adjust for your time zone)
+const int daylight_offset_sec = 0;        // Daylight saving time offset in seconds
 
+// WiFi and MQTT client initialization
+BearSSL::WiFiClientSecure espClient;
+PubSubClient mqtt_client(espClient);
+
+// SSL certificate for MQTT broker
+// Load DigiCert Global Root G2, which is used by EMQX Public Broker: broker.emqx.io
+static const char ca_cert[]
+PROGMEM = R"EOF(
+-----BEGIN CERTIFICATE-----
+MIIDjjCCAnagAwIBAgIQAzrx5qcRqaC7KGSxHQn65TANBgkqhkiG9w0BAQsFADBh
+MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3
+d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBH
+MjAeFw0xMzA4MDExMjAwMDBaFw0zODAxMTUxMjAwMDBaMGExCzAJBgNVBAYTAlVT
+MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j
+b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IEcyMIIBIjANBgkqhkiG
+9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuzfNNNx7a8myaJCtSnX/RrohCgiN9RlUyfuI
+2/Ou8jqJkTx65qsGGmvPrC3oXgkkRLpimn7Wo6h+4FR1IAWsULecYxpsMNzaHxmx
+1x7e/dfgy5SDN67sH0NO3Xss0r0upS/kqbitOtSZpLYl6ZtrAGCSYP9PIUkY92eQ
+q2EGnI/yuum06ZIya7XzV+hdG82MHauVBJVJ8zUtluNJbd134/tJS7SsVQepj5Wz
+tCO7TG1F8PapspUwtP1MVYwnSlcUfIKdzXOS0xZKBgyMUNGPHgm+F6HmIcr9g+UQ
+vIOlCsRnKPZzFBQ9RnbDhxSJITRNrw9FDKZJobq7nMWxM4MphQIDAQABo0IwQDAP
+BgNVHRMBAf8EBTADAQH/MA4GA1UdDwEB/wQEAwIBhjAdBgNVHQ4EFgQUTiJUIBiV
+5uNu5g/6+rkS7QYXjzkwDQYJKoZIhvcNAQELBQADggEBAGBnKJRvDkhj6zHd6mcY
+1Yl9PMWLSn/pvtsrF9+wX3N3KjITOYFnQoQj8kVnNeyIv/iPsGEMNKSuIEyExtv4
+NeF22d+mQrvHRAiGfzZ0JFrabA0UWTW98kndth/Jsw1HKj2ZL7tcu7XUIOGZX1NG
+Fdtom/DzMNU+MeKNhJ7jitralj41E6Vf8PlwUHBHQRFXGU7Aj64GxJUTFy8bJZ91
+8rGOmaFvE7FBcf6IKshPECBV1/MUReXgRPTqh5Uykw7+U0b6LJ3/iyK5S9kJRaTe
+pLiaWN0bfVKfjllDiIGknibVb63dDcY3fe0Dkhvld1927jyNxF1WW6LZZm6zNTfl
+MrY=
+-----END CERTIFICATE-----
+)EOF";
+
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
 /*
-  The common fingerprints of EMQX broker, for reference only.
-  If you are not using EMQX Cloud Serverless or public EMQX broker,
-  you need to calculate the sha1 fingerprint of your server certificate
-  and update the 'fingerprint' variable below.
+static const char ca_cert[] PROGMEM = R"EOF(
+-----BEGIN CERTIFICATE-----
+MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh
+MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3
+d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD
+QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT
+MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j
+b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG
+9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB
+CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97
+nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt
+43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P
+T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4
+gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO
+BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR
+TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw
+DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr
+hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg
+06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF
+PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls
+YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk
+CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4=
+-----END CERTIFICATE-----
+)EOF";
 */
-// 1. fingerprint of public emqx broker. Host: broker.emqx.io
-const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8 21 8E";
-// 2. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.com
-// const char* fingerprint = "42:AE:D8:A3:42:F1:C4:1F:CD:64:9C:D7:4B:A1:EE:5B:5E:D7:E2:B5";
-// 3. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.cn
-// const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
-```
-
-Openssl fingerprint
-``` bash
-openssl s_client -connect {Connection-Address}:8883 < /dev/null 2>/dev/null | openssl x509 -fingerprint -sha1 -noout -in /dev/stdin
-```
-
-For Windows PowerShell
-``` bash
-openssl s_client -connect {Connection-Address}:8883 | openssl x509 -fingerprint -sha1 -noout
 ```
 
 4. Open a serial connection to output the result of the program and connect to the Wi-Fi network.
 
 ```c
-// Set software serial baud to 115200;
-Serial.begin(115200);
-// connecting to a WiFi network
-WiFi.begin(ssid, password);
-while (WiFi.status() != WL_CONNECTED) {
-    delay(500);
-    Serial.println("Connecting to WiFi..");
+void setup() {
+    Serial.begin(115200);
+    connectToWiFi();
+    syncTime();  // X.509 validation requires synchronization time
+    mqtt_client.setServer(mqtt_broker, mqtt_port);
+    mqtt_client.setCallback(mqttCallback);
+    connectToMQTT();
 }
-Serial.println("Connected to the WiFi network");
+
+void connectToWiFi() {
+    WiFi.begin(ssid, password);
+    while (WiFi.status() != WL_CONNECTED) {
+        delay(1000);
+        Serial.println("Connecting to WiFi...");
+    }
+    Serial.println("Connected to WiFi");
+}
 ```
 
 5. Set fingerprint and MQTT broker. Write callback function, and print connection information on the serial monitor at the same time.
 
 ```c
-// set fingerprint
-espClient.setFingerprint(fingerprint);
-client.setServer(mqtt_broker, mqtt_port);
-client.setCallback(callback);
-while (!client.connected()) {
-    String client_id = "esp8266-client-";
-    client_id += String(WiFi.macAddress());
-    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
-    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-        Serial.println("Connected to MQTT broker.");
-    } else {
-        Serial.print("Failed to connect to MQTT broker, rc=");
-        Serial.print(client.state());
-        Serial.println(" Retrying in 5 seconds.");
-        delay(5000);
+void connectToMQTT() {
+    BearSSL::X509List serverTrustedCA(ca_cert);
+    espClient.setTrustAnchors(&serverTrustedCA);
+    while (!mqtt_client.connected()) {
+        String client_id = "esp8266-client-" + String(WiFi.macAddress());
+        Serial.printf("Connecting to MQTT Broker as %s.....\n", client_id.c_str());
+        if (mqtt_client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+            Serial.println("Connected to MQTT broker");
+            mqtt_client.subscribe(mqtt_topic);
+            // Publish message upon successful connection
+            mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
+        } else {
+            char err_buf[128];
+            espClient.getLastSSLError(err_buf, sizeof(err_buf));
+            Serial.print("Failed to connect to MQTT broker, rc=");
+            Serial.println(mqtt_client.state());
+            Serial.print("SSL error: ");
+            Serial.println(err_buf);
+            delay(5000);
+        }
     }
 }
 ```
@@ -281,23 +360,22 @@ while (!client.connected()) {
 6. After successfully connecting to the MQTT broker, ESP8266 will publish messages and subscribe to the MQTT broker.
 
 ```c
-// publish and subscribe
-client.publish(topic, "hello emqx"); // publish to the topic
-client.subscribe(topic); // subscribe from the topic
+mqtt_client.subscribe(mqtt_topic);
+// Publish message upon successful connection
+mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
 ```
 
 7. Print the topic name to the serial port and then print every byte of received messages.
 
 ```c
-void callback(char *topic, byte *payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
+void mqttCallback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message received on topic: ");
+    Serial.print(topic);
+    Serial.print("]: ");
     for (int i = 0; i < length; i++) {
         Serial.print((char) payload[i]);
     }
     Serial.println();
-    Serial.println("-----------------------");
 }
 ```
 
@@ -306,84 +384,169 @@ The complete code is displayed as follows:
 ```c
 #include <ESP8266WiFi.h>
 #include <PubSubClient.h>
+#include <time.h>
 
-// WiFi
-const char *ssid = "[WIFI SSID]"; // Enter your WiFi name
-const char *password = "[WIFI password]";  // Enter WiFi password
+// WiFi credentials
+const char *ssid = "WIFI_SSID";             // Replace with your WiFi name
+const char *password = "WIFI_PASSWORD";   // Replace with your WiFi password
 
-// MQTT Broker
-const char *mqtt_broker = "broker.emqx.io"; // broker address
-const char *topic = "esp8266/test"; // define topic 
-const char *mqtt_username = "emqx"; // username for authentication
-const char *mqtt_password = "public"; // password for authentication
-const int mqtt_port = 8883; // port of MQTT over TLS/SSL
+// MQTT Broker settings
+const int mqtt_port = 8883;  // MQTT port (TLS)
+const char *mqtt_broker = "broker.emqx.io";  // EMQX broker endpoint
+const char *mqtt_topic = "emqx/esp8266";     // MQTT topic
+const char *mqtt_username = "emqx";  // MQTT username for authentication
+const char *mqtt_password = "public";  // MQTT password for authentication
 
-// init wifi client
-WiFiClientSecure espClient;
-PubSubClient client(espClient);
+// NTP Server settings
+const char *ntp_server = "pool.ntp.org";     // Default NTP server
+// const char* ntp_server = "cn.pool.ntp.org"; // Recommended NTP server for users in China
+const long gmt_offset_sec = 0;            // GMT offset in seconds (adjust for your time zone)
+const int daylight_offset_sec = 0;        // Daylight saving time offset in seconds
 
+// WiFi and MQTT client initialization
+BearSSL::WiFiClientSecure espClient;
+PubSubClient mqtt_client(espClient);
+
+// SSL certificate for MQTT broker
+// Load DigiCert Global Root G2, which is used by EMQX Public Broker: broker.emqx.io
+static const char ca_cert[]
+PROGMEM = R"EOF(
+-----BEGIN CERTIFICATE-----
+MIIDjjCCAnagAwIBAgIQAzrx5qcRqaC7KGSxHQn65TANBgkqhkiG9w0BAQsFADBh
+MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3
+d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBH
+MjAeFw0xMzA4MDExMjAwMDBaFw0zODAxMTUxMjAwMDBaMGExCzAJBgNVBAYTAlVT
+MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j
+b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IEcyMIIBIjANBgkqhkiG
+9w0BAQEFAAOCAQ8AMIIBCgKCAQEAuzfNNNx7a8myaJCtSnX/RrohCgiN9RlUyfuI
+2/Ou8jqJkTx65qsGGmvPrC3oXgkkRLpimn7Wo6h+4FR1IAWsULecYxpsMNzaHxmx
+1x7e/dfgy5SDN67sH0NO3Xss0r0upS/kqbitOtSZpLYl6ZtrAGCSYP9PIUkY92eQ
+q2EGnI/yuum06ZIya7XzV+hdG82MHauVBJVJ8zUtluNJbd134/tJS7SsVQepj5Wz
+tCO7TG1F8PapspUwtP1MVYwnSlcUfIKdzXOS0xZKBgyMUNGPHgm+F6HmIcr9g+UQ
+vIOlCsRnKPZzFBQ9RnbDhxSJITRNrw9FDKZJobq7nMWxM4MphQIDAQABo0IwQDAP
+BgNVHRMBAf8EBTADAQH/MA4GA1UdDwEB/wQEAwIBhjAdBgNVHQ4EFgQUTiJUIBiV
+5uNu5g/6+rkS7QYXjzkwDQYJKoZIhvcNAQELBQADggEBAGBnKJRvDkhj6zHd6mcY
+1Yl9PMWLSn/pvtsrF9+wX3N3KjITOYFnQoQj8kVnNeyIv/iPsGEMNKSuIEyExtv4
+NeF22d+mQrvHRAiGfzZ0JFrabA0UWTW98kndth/Jsw1HKj2ZL7tcu7XUIOGZX1NG
+Fdtom/DzMNU+MeKNhJ7jitralj41E6Vf8PlwUHBHQRFXGU7Aj64GxJUTFy8bJZ91
+8rGOmaFvE7FBcf6IKshPECBV1/MUReXgRPTqh5Uykw7+U0b6LJ3/iyK5S9kJRaTe
+pLiaWN0bfVKfjllDiIGknibVb63dDcY3fe0Dkhvld1927jyNxF1WW6LZZm6zNTfl
+MrY=
+-----END CERTIFICATE-----
+)EOF";
+
+// Load DigiCert Global Root CA ca_cert, which is used by EMQX Cloud Serverless Deployment
 /*
-  The common fingerprints of EMQX broker, for reference only.
-  If you are not using EMQX Cloud Serverless or public EMQX broker,
-  you need to calculate the sha1 fingerprint of your server certificate
-  and update the 'fingerprint' variable below.
+static const char ca_cert[] PROGMEM = R"EOF(
+-----BEGIN CERTIFICATE-----
+MIIDrzCCApegAwIBAgIQCDvgVpBCRrGhdWrJWZHHSjANBgkqhkiG9w0BAQUFADBh
+MQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3
+d3cuZGlnaWNlcnQuY29tMSAwHgYDVQQDExdEaWdpQ2VydCBHbG9iYWwgUm9vdCBD
+QTAeFw0wNjExMTAwMDAwMDBaFw0zMTExMTAwMDAwMDBaMGExCzAJBgNVBAYTAlVT
+MRUwEwYDVQQKEwxEaWdpQ2VydCBJbmMxGTAXBgNVBAsTEHd3dy5kaWdpY2VydC5j
+b20xIDAeBgNVBAMTF0RpZ2lDZXJ0IEdsb2JhbCBSb290IENBMIIBIjANBgkqhkiG
+9w0BAQEFAAOCAQ8AMIIBCgKCAQEA4jvhEXLeqKTTo1eqUKKPC3eQyaKl7hLOllsB
+CSDMAZOnTjC3U/dDxGkAV53ijSLdhwZAAIEJzs4bg7/fzTtxRuLWZscFs3YnFo97
+nh6Vfe63SKMI2tavegw5BmV/Sl0fvBf4q77uKNd0f3p4mVmFaG5cIzJLv07A6Fpt
+43C/dxC//AH2hdmoRBBYMql1GNXRor5H4idq9Joz+EkIYIvUX7Q6hL+hqkpMfT7P
+T19sdl6gSzeRntwi5m3OFBqOasv+zbMUZBfHWymeMr/y7vrTC0LUq7dBMtoM1O/4
+gdW7jVg/tRvoSSiicNoxBN33shbyTApOB6jtSj1etX+jkMOvJwIDAQABo2MwYTAO
+BgNVHQ8BAf8EBAMCAYYwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUA95QNVbR
+TLtm8KPiGxvDl7I90VUwHwYDVR0jBBgwFoAUA95QNVbRTLtm8KPiGxvDl7I90VUw
+DQYJKoZIhvcNAQEFBQADggEBAMucN6pIExIK+t1EnE9SsPTfrgT1eXkIoyQY/Esr
+hMAtudXH/vTBH1jLuG2cenTnmCmrEbXjcKChzUyImZOMkXDiqw8cvpOp/2PV5Adg
+06O/nVsJ8dWO41P0jmP6P6fbtGbfYmbW0W5BjfIttep3Sp+dWOIrWcBAI+0tKIJF
+PnlUkiaY4IBIqDfv8NZ5YBberOgOzW6sRBc4L0na4UU+Krk2U886UAb3LujEV0ls
+YSEY1QSteDwsOoBrp+uvFRTp2InBuThs4pFsiv9kuXclVzDAGySj4dzp30d8tbQk
+CAUw7C29C79Fv1C5qfPrmAESrciIxpg0X40KPMbp1ZWVbd4=
+-----END CERTIFICATE-----
+)EOF";
 */
-// 1. fingerprint of public emqx broker. Host: broker.emqx.io
-const char* fingerprint = "B6 C6 FF 82 C6 59 09 BB D6 39 80 7F E7 BC 10 C9 19 C8 21 8E";
-// 2. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.com
-// const char* fingerprint = "42:AE:D8:A3:42:F1:C4:1F:CD:64:9C:D7:4B:A1:EE:5B:5E:D7:E2:B5";
-// 3. fingerprint of EMQX Cloud Serverless. Host: *.emqxsl.cn
-// const char* fingerprint = "7E:52:D3:84:48:3C:5A:9F:A4:39:9A:8B:27:01:B1:F8:C6:AD:D4:47";
+
+
+// Function declarations
+void connectToWiFi();
+
+void connectToMQTT();
+
+void syncTime();
+
+void mqttCallback(char *topic, byte *payload, unsigned int length);
 
 
 void setup() {
-  Serial.begin(115200);
-  WiFi.begin(ssid, password);
-  while (WiFi.status() != WL_CONNECTED) {
-    delay(1000);
-    Serial.println("Connecting to WiFi...");
-  }
-  Serial.println("Connected to the WiFi network");
-
-  // set fingerprint
-  espClient.setFingerprint(fingerprint);
-  client.setServer(mqtt_broker, mqtt_port);
-  client.setCallback(callback);
-  while (!client.connected()) {
-    String client_id = "esp8266-client-";
-    client_id += String(WiFi.macAddress());
-    Serial.printf("The client %s connects to the mqtt broker\n", client_id.c_str());
-    if (client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
-        Serial.println("Connected to MQTT broker.");
-    } else {
-        Serial.print("Failed to connect to MQTT broker, rc=");
-        Serial.print(client.state());
-        Serial.println(" Retrying in 5 seconds.");
-        delay(5000);
-    }
-  }
-
-    // publish and subscribe
-    client.publish(topic, "hello emqx"); // publish to the topic
-    client.subscribe(topic); // subscribe from the topic
+    Serial.begin(115200);
+    connectToWiFi();
+    syncTime();  // X.509 validation requires synchronization time
+    mqtt_client.setServer(mqtt_broker, mqtt_port);
+    mqtt_client.setCallback(mqttCallback);
+    connectToMQTT();
 }
 
-void callback(char* topic, byte* payload, unsigned int length) {
-    Serial.print("Message arrived in topic: ");
-    Serial.println(topic);
-    Serial.print("Message:");
+void connectToWiFi() {
+    WiFi.begin(ssid, password);
+    while (WiFi.status() != WL_CONNECTED) {
+        delay(1000);
+        Serial.println("Connecting to WiFi...");
+    }
+    Serial.println("Connected to WiFi");
+}
+
+void syncTime() {
+    configTime(gmt_offset_sec, daylight_offset_sec, ntp_server);
+    Serial.print("Waiting for NTP time sync: ");
+    while (time(nullptr) < 8 * 3600 * 2) {
+        delay(1000);
+        Serial.print(".");
+    }
+    Serial.println("Time synchronized");
+    struct tm timeinfo;
+    if (getLocalTime(&timeinfo)) {
+        Serial.print("Current time: ");
+        Serial.println(asctime(&timeinfo));
+    } else {
+        Serial.println("Failed to obtain local time");
+    }
+}
+
+void connectToMQTT() {
+    BearSSL::X509List serverTrustedCA(ca_cert);
+    espClient.setTrustAnchors(&serverTrustedCA);
+    while (!mqtt_client.connected()) {
+        String client_id = "esp8266-client-" + String(WiFi.macAddress());
+        Serial.printf("Connecting to MQTT Broker as %s.....\n", client_id.c_str());
+        if (mqtt_client.connect(client_id.c_str(), mqtt_username, mqtt_password)) {
+            Serial.println("Connected to MQTT broker");
+            mqtt_client.subscribe(mqtt_topic);
+            // Publish message upon successful connection
+            mqtt_client.publish(topic, "Hi EMQX I'm ESP8266 ^^");
+        } else {
+            char err_buf[128];
+            espClient.getLastSSLError(err_buf, sizeof(err_buf));
+            Serial.print("Failed to connect to MQTT broker, rc=");
+            Serial.println(mqtt_client.state());
+            Serial.print("SSL error: ");
+            Serial.println(err_buf);
+            delay(5000);
+        }
+    }
+}
+
+void mqttCallback(char *topic, byte *payload, unsigned int length) {
+    Serial.print("Message received on topic: ");
+    Serial.print(topic);
+    Serial.print("]: ");
     for (int i = 0; i < length; i++) {
         Serial.print((char) payload[i]);
     }
     Serial.println();
-    Serial.println("-----------------------");
 }
 
 void loop() {
-  if (!client.connected()) {
-    reconnect();
-  }
-  client.loop();
+    if (!mqtt_client.connected()) {
+        connectToMQTT();
+    }
+    mqtt_client.loop();
 }
 ```
 
